Issue #34: Dialogs and z-index tweaks. Part of #34.

--- a/styles/base/_backdrop-overrides.scss
+++ b/styles/base/_backdrop-overrides.scss
@@ -339,24 +339,6 @@ fieldset.collapsible {
   }
 }
 
-fieldset.collapsed {
-  border: none;
-
-  > legend {
-    border: none;
-  }
-
-  .fieldset-legend {
-    .fieldset-title {
-      border: 1px solid var(--gin-border-color);
-    }
-
-    .fieldset-title::before {
-      transform: rotate(-90deg);
-    }
-  }
-}
-
 fieldset.form-wrapper {
   padding: var(--gin-spacing-m) var(--gin-spacing-l);
   color: var(--gin-color-text);
@@ -403,6 +385,25 @@ fieldset:not(.fieldgroup) {
   }
 }
 
+fieldset.collapsible.collapsed {
+  border: none;
+
+  > legend {
+    border: none;
+    margin: 0 auto;
+  }
+
+  .fieldset-legend {
+    .fieldset-title {
+      border: 1px solid var(--gin-border-color);
+    }
+
+    .fieldset-title::before {
+      transform: rotate(-90deg);
+    }
+  }
+}
+
 /* Layout admin pages */
 .layout-content-form {
   .page-title {
@@ -421,6 +422,10 @@ fieldset:not(.fieldgroup) {
 
   .gin-secondary-toolbar {
     height: auto;
+    z-index: 0;
+  }
+
+  .region-sticky {
     z-index: 0;
   }
 
@@ -445,5 +450,11 @@ fieldset:not(.fieldgroup) {
 .layout-editor-region-title {
   .label {
     text-transform: none;
+  }
+}
+
+.layout-block-configure-form {
+  .form-actions {
+    display: none;
   }
 }
