--- a/styles/components/toolbar_secondary.scss
+++ b/styles/components/toolbar_secondary.scss
@@ -4,7 +4,7 @@
 }
 
 .gin-secondary-toolbar {
-  z-index: 102;
+  z-index: 100;
   position: relative;
   display: flex;
   align-items: center;
@@ -168,7 +168,7 @@
 
     .toolbar-bar {
       height: var(--gin-toolbar-height);
-      z-index: 102;
+      z-index: 100;
 
       .toolbar-tab {
         display: block;
